ignore new links for first 10 fetches, add ignore and highlight words

--- a/.env-example
+++ b/.env-example
@@ -3,3 +3,5 @@ XPATH_QUERY=//x:article/x:section[3]/x:div[1]/x:a/@href
 INTERVAL=15000
 TELEGRAM_TOKEN=
 TELEGRAM_CHAT_ID=
+HIGHLIGHT_WORDS=
+IGNORE_WORDS=
